--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <header>
-        <img src="me.jpg" alt="Profile Photo">
+        <img src="im/me.jpg" alt="Profile Photo">
         <h1>Welcome to Abdul Aziz's Website</h1>
         <nav>
             <a href="page1.html">Home</a>
@@ -118,10 +118,10 @@
     <section>
         <h2>Essential Computer Parts</h2>
         <div class="parts">
-            <img src="CPU.jpg" alt="CPU">
-            <img src="motherboard.jpg" alt="Motherboard">
-            <img src="GPU.avif" alt="GPU">
-            <img src="RAM.jpg" alt="RAM">
+            <img src="im/CPU.jpg" alt="CPU">
+            <img src="im/motherboard.jpg" alt="Motherboard">
+            <img src="im/GPU.avif" alt="GPU">
+            <img src="im/RAM.jpg" alt="RAM">
         </div>
     </section>
     <footer>
@@ -184,10 +184,10 @@
     <section>
         <h2>Photo Gallery</h2>
         <div class="gallery">
-            <img src="Keyboard.jpg" alt="Keyboard">
-            <img src="Monitor.jpg" alt="Monitor">
-            <img src="Mouse.jpg" alt="Mouse">
-            <img src="Speaker.avif" alt="Speaker">
+            <img src="im/Keyboard.jpg" alt="Keyboard">
+            <img src="im/Monitor.jpg" alt="Monitor">
+            <img src="im/Mouse.jpg" alt="Mouse">
+            <img src="im/Speaker.avif" alt="Speaker">
         </div>
     </section>
     <footer>
