--- a/page1.html
+++ b/page1.html
@@ -112,7 +112,7 @@
 
     <div class="main-content">
         <h2>Hello, I'm Abdul Aziz!</h2>
-        <img src="me.jpg" alt="Abdul Aziz" class="profile-img">
+        <img src="im/me.jpg" alt="Abdul Aziz" class="profile-img">
         <div class="details">
             <p>A student of B.S SE at Abasyn University Peshawar</p>
             <p>Address: Pakistan, KPK, Mardan, Takht Bhai</p>
