--- a/page2.html
+++ b/page2.html
@@ -79,32 +79,32 @@
         <h2>Essential Computer Parts</h2>
         <div class="parts">
             <div class="part">
-                <img src="cpu.jpg" alt="CPU">
+                <img src="im/cpu.jpg" alt="CPU">
                 <h3>CPU (Central Processing Unit)</h3>
                 <p>The brain of the computer, responsible for processing instructions and performing calculations.</p>
             </div>
             <div class="part">
-                <img src="motherboard.jpg" alt="Motherboard">
+                <img src="im/motherboard.jpg" alt="Motherboard">
                 <h3>Motherboard</h3>
                 <p>The main circuit board that connects all the components of a computer.</p>
             </div>
             <div class="part">
-                <img src="gpu.jpg" alt="GPU">
+                <img src="im/gpu.jpg" alt="GPU">
                 <h3>GPU (Graphics Processing Unit)</h3>
                 <p>Handles rendering of images, video, and 3D graphics for applications and games.</p>
             </div>
             <div class="part">
-                <img src="ram.jpg" alt="RAM">
+                <img src="im/ram.jpg" alt="RAM">
                 <h3>RAM (Random Access Memory)</h3>
                 <p>Temporary memory that stores data for currently running programs and processes.</p>
             </div>
             <div class="part">
-                <img src="storage.jpg" alt="Storage">
+                <img src="im/storage.jpg" alt="Storage">
                 <h3>Storage</h3>
                 <p>Devices like HDDs and SSDs store all your data, operating system, and software.</p>
             </div>
             <div class="part">
-                <img src="Power Supply Unit(PSU).jpg" alt="PSU">
+                <img src="im/Power Supply Unit(PSU).jpg" alt="PSU">
                 <h3>Power Supply Unit (PSU)</h3>
                 <p>Converts electrical power from the outlet into usable power for computer components.</p>
             </div>
