--- a/page3.html
+++ b/page3.html
@@ -127,42 +127,42 @@
         <p>Learn about popular programming languages and their significance in technology.</p>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="python.jpg" alt="Python">
+                <img src="im/python.jpg" alt="Python">
                 <h3>Python</h3>
                 <p>Python is a versatile language known for its simplicity and wide range of applications, from web development to data science.</p>
             </div>
             <div class="gallery-item">
-                <img src="java.jpg" alt="Java">
+                <img src="azizHTML.html/java.jpg" alt="Java">
                 <h3>Java</h3>
                 <p>Java is a powerful, platform-independent language commonly used for building enterprise-grade applications.</p>
             </div>
             <div class="gallery-item">
-                <img src="javascript.jpg" alt="JavaScript">
+                <img src="im/javascript.jpg" alt="JavaScript">
                 <h3>JavaScript</h3>
                 <p>JavaScript is the language of the web, enabling dynamic and interactive content on websites and applications.</p>
             </div>
             <div class="gallery-item">
-                <img src="C++.jpg" alt="C++">
+                <img src="im/C++.jpg" alt="C++">
                 <h3>C++</h3>
                 <p>C++ is a high-performance language widely used for system-level programming, game development, and embedded systems.</p>
             </div>
             <div class="gallery-item">
-                <img src="Csharp.jpeg" alt="C#">
+                <img src="im/Csharp.jpeg" alt="C#">
                 <h3>C#</h3>
                 <p>C# is a modern, object-oriented language developed by Microsoft for building Windows applications and games.</p>
             </div>
             <div class="gallery-item">
-                <img src="ruby.jpg" alt="Ruby">
+                <img src="im/ruby.jpg" alt="Ruby">
                 <h3>Ruby</h3>
                 <p>Ruby is an elegant language used for web development, best known for the Ruby on Rails framework.</p>
             </div>
             <div class="gallery-item">
-                <img src="php.jpg" alt="PHP">
+                <img src="im/php.jpg" alt="PHP">
                 <h3>PHP</h3>
                 <p>PHP is a server-side language commonly used for creating dynamic websites and web applications.</p>
             </div>
             <div class="gallery-item">
-                <img src="HTML & CSS.webp" alt="HTML and CSS">
+                <img src="im/HTML & CSS.webp" alt="HTML and CSS">
                 <h3>HTML & CSS</h3>
                 <p>HTML and CSS are the backbone of web development, allowing developers to structure and style web pages.</p>
             </div>
