--- a/page2.html
+++ b/page2.html
@@ -79,17 +79,17 @@
         <h2>Essential Computer Parts</h2>
         <div class="parts">
             <div class="part">
-                <img src="im/cpu.jpg" alt="CPU">
+                <img src="images/cpu.jpg" alt="CPU">
                 <h3>CPU (Central Processing Unit)</h3>
                 <p>The brain of the computer, responsible for processing instructions and performing calculations.</p>
             </div>
             <div class="part">
-                <img src="im/motherboard.jpg" alt="Motherboard">
+                <img src="images/motherboard.jpg" alt="Motherboard">
                 <h3>Motherboard</h3>
                 <p>The main circuit board that connects all the components of a computer.</p>
             </div>
             <div class="part">
-                <img src="im/gpu.jpg" alt="GPU">
+                <img src="images/gpu.jpg" alt="GPU">
                 <h3>GPU (Graphics Processing Unit)</h3>
                 <p>Handles rendering of images, video, and 3D graphics for applications and games.</p>
             </div>
